sample-helm-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.devopsb61.online
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
